update fonts, html et css

--- a/index.html
+++ b/index.html
@@ -4,80 +4,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
+    <script src="./js/script.js" defer></script>
     <title>Breco</title>
+    <link rel="stylesheet" href="./css/normalize.css" >
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="./assets/favicon/site.webmanifest">
 </head>
 
-<body>
-
+<body>    
+    <div class="background"></div>
     <header>
-
-        <img src="assets/images/back.png" alt="Image de fond décorative">
-        <div id="banner">
-            <nav>
-                <img src="assets/images/burger.svg" alt="Menu">
-            </nav>
-            <h1>Breco</h1>
-        </div>
+        <nav>
+            <i class="iconBurger">
+                <button type="button" aria-label="menu"></button>
+            </i>
+            <ul id="navList">
+                <li><a href="./index.html">Accueil</a></li>
+            </ul>
+        </nav>
     </header>
-
     <main>
-        <h2>Vous recherchez</h2>
-        <form action="">
-            <div id="search-panel" class="shadow">
-                <div class="search">
-                    <div class="search-loc">
-                        <label for="villeDepart">Depuis</label>
-                        <input type="text" id="villeDepart" name="villeDepart" value="Vignoc">
-                        <ul id="listeDepart"></ul>
+        <h1>Breco</h1>
+        <section id="mainSection">
+            <div id="searchWindow">
+                <h2>Vous recherchez</h2>
+                <form action="#">
+                    <div id="trajet" class="whiteWindow">
+                        <div id="Depart">
+                            <div>
+                                <label for="villeDepart">Depuis</label>
+                                <input type="text" id="villeDepart" name="villeDepart" autocomplete="off">
+                                <ul id="listeDepart"></ul>
+                            </div>
+                            <div>
+                                <label for="heureDepart">À</label>
+                                <input type="text" id="heureDepart" name="heureDepart" autocomplete="off">
+                            </div>
+                        </div>
+                        <div id="Duree"></div>
+                        <div id="Arrivee">
+                            <div>
+                                <label for="villeArrivee">Vers</label>
+                                <input type="text" id="villeArrivee" name="villeArrivee" autocomplete="off">
+                                <ul id="listeArrivee"></ul>
+                            </div>
+                            <div>
+                                <label for="heureArrivee">À</label>
+                                <input type="text" id="heureArrivee" name="heureArrivee" autocomplete="off">
+                            </div>
+                        </div>
                     </div>
-                    <div class="search-time">
-                        <label for="heureDepart">À</label>
-                        <input type="text" id="heureDepart" name="heureDepart" value="07:43" class="evaluate">
+                    <div id="jours" class="whiteWindow">
+                    <input type="checkbox" id="J1" name="J1" ><label for="J1">Lun</label>
+                    <input type="checkbox" id="J2" name="J2" ><label for="J2">Mar</label>
+                    <input type="checkbox" id="J3" name="J3" ><label for="J3">Mer</label>
+                    <input type="checkbox" id="J4" name="J4" ><label for="J4">Jeu</label>
+                    <input type="checkbox" id="J5" name="J5" ><label for="J5">Ven</label>
+                    <input type="checkbox" id="J6" name="J6" ><label for="J6">Sam</label>
+                    <input type="checkbox" id="J7" name="J7" ><label for="J7">Dim</label>    
                     </div>
-                </div>
-                <div class="separator">
-                    <p>+ 17 min</p>
-                </div>
-                <div class="search">
-                    <div class="search-loc">
-                        <label for="villeArrivee">Vers</label>
-                        <input type="text" id="villeArrivee" name="villeArrivee" value="Rennes">
-                        <ul id="listeArrivee"></ul>
-                    </div>
-                    <div class="search-time">
-                        <label for="heureArrivee">À</label>
-                        <input type="text" id="heureArrivee" name="heureArrivee" value="08:00">
-                    </div>
-                </div>
+                    <button type="submit" class="search">Rechercher</button>
+                </form>
             </div>
-
-            <div id="search-days" class="shadow">
-                <ul>
-                    <li><a href="#" class="active">Lun</a></li>
-                    <li><a href="#" class="active">Mar</a></li>
-                    <li><a href="#" class="active">Mer</a></li>
-                    <li><a href="#" class="active">Jeu</a></li>
-                    <li><a href="#" class="active">Ven</a></li>
-                    <li><a href="#">Sam</a></li>
-                    <li><a href="#">Dim</a></li>
-                </ul>
-            </div>
-
-            <button class="cta_butt" type="button">
-                Rechercher
-            </button>
-        </form>
-
-
+        </section>
     </main>
-
-
 </body>
 
 </html>
