--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             </div>
                             <div>
                                 <label for="heureDepart">À</label>
-                                <input type="text" id="heureDepart" name="heureDepart" autocomplete="off">
+                                <input type="text" id="heureDepart" name="heureDepart" autocomplete="off" placeholder="00:00" maxlength="5">
                             </div>
                         </div>
                         <div id="Duree"></div>
@@ -56,7 +56,7 @@
                             </div>
                             <div>
                                 <label for="heureArrivee">À</label>
-                                <input type="text" id="heureArrivee" name="heureArrivee" autocomplete="off">
+                                <input type="text" id="heureArrivee" name="heureArrivee" autocomplete="off" placeholder="00:00" maxlength="5">
                             </div>
                         </div>
                     </div>
